Fix message width on mobile

--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 700px;
   max-width: 100%;
   max-height: 100%;
 }
@@ -199,7 +200,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%); */
   height: 100%;
-  width: 700px;
+  /* width: 700px; */
   max-width: 100%;
   block-size: fit-content;
   text-align: center;
@@ -336,6 +337,8 @@ body {
   width: 50px;
   height: 55px;
 }
+
+/* MEDIA QUERIES */
 @media screen and (max-width: 1280px) and (max-height: 670px) {
   #logo {
     display: none;
@@ -352,11 +355,9 @@ body {
   }
 }
 @media screen and (max-width: 850px), screen and (max-height: 550px) {
-  #welcomeScreen {
-    width: 650px;
-  }
   #ui_container {
     font-size: 26px;
+    width: 650px;
   }
   .check {
     width: 50px;
@@ -378,11 +379,9 @@ body {
 }
 
 @media screen and (max-width: 650px), screen and (max-height: 500px) {
-  #welcomeScreen {
-    width: 590px;
-  }
   #ui_container {
     font-size: 20px;
+    width: 590px;
   }
   .buttonText {
     font-size: 24px;
@@ -412,7 +411,7 @@ body {
   }
 }
 @media screen and (max-height: 460px) {
-  #welcomeScreen {
+  #ui_container {
     width: 540px;
   }
 }
@@ -464,7 +463,7 @@ body {
 }
 
 @media screen and (max-height: 420px) {
-  #welcomeScreen {
+  #ui_container {
     width: 500px;
   }
   #nextButton {
@@ -472,7 +471,7 @@ body {
   }
 }
 @media screen and (max-height: 400px) {
-  #welcomeScreen {
+  #ui_container {
     width: 450px;
   }
   #chestClosed {
@@ -480,7 +479,7 @@ body {
   }
 }
 @media screen and (max-height: 350px) {
-  #welcomeScreen {
+  #ui_container {
     width: 410px;
   }
   #nextButton {
@@ -504,7 +503,7 @@ body {
   }
 }
 @media screen and (max-height: 300px) {
-  #welcomeScreen {
+  #ui_container {
     width: 350px;
   }
   #messagePart1,
